fix: attempt to fix header display issue on mobile
- Header currently displays improperly on mobile, but issue can't be replicated locally.

--- a/css/style.css
+++ b/css/style.css
@@ -214,9 +214,8 @@ footer ul {
 }
 #gallery-highlight {
   display: block;
-  max-width: 100vw;
+  max-width: 95vw;
   max-height: 70vh;
-  padding: 0rem 0;
   margin-left: auto;
   margin-right: auto;
   background-color: black;
@@ -228,11 +227,10 @@ footer ul {
   justify-content: space-evenly;
   align-items: flex-start;
   gap: 1rem;
-  padding-top: 1rem;
-  padding-bottom: 2.5rem;
+  padding: 1rem .5rem 2.5rem .5rem
 }
 .gallery-thumbnails {
-  width: 25vw;
+  width: 20vw;
   background-color: black;
 }
 .gallery-thumbnails:hover {
